[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "imports: mark tests for importing data",
    "export: mark tests for exporting data",
    "query: mark tests for querying data",
]

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3

# We restrict ourselves to CPython 3.9
build = "cp38-*"

# Testing commands for our wheels
test-requires = ["pytest"]
test-command = "pytest {package}/pytreedb/test"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | __pycache__
)/
'''
