[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "imports: mark tests for importing data",
    "export: mark tests for exporting data",
    "query: mark tests for querying data",
]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | __pycache__
)/
'''
