[metadata]
name = pytreedb
version = attr: pytreedb.__version__
description = python library for tree database management and access
long_description = file: README.md
long_description_content_type = text/markdown
author = 3DGeo Heidelberg
author_email = hoefle@uni-heidelberg.de
license = (L)GPL License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy
    python-dotenv
    pymongo[srv]
    notebook
include_package_data = True

[options.extras_require]
nb_vis =
    shapely
    folium
    matplotlib
    laspy[laszip]>=2.0
