[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3

# We restrict ourselves to CPython 3.9
build = "cp38-*"

# Testing commands for our wheels
test-command = "pytest {package}/pytreedb_server/test"
test-requires = ["pytest"]
