[metadata]
name = pytreedb_server
version = attr: pytreedb_server.__version__
description = server for providing API access to pytreedb
long_description = file: README.md
long_description_content_type = text/markdown
author = 3DGeo Heidelberg
author_email = hoefle@uni-heidelberg.de
license = (L)GPL License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pytreedb
    flask
    python-dotenv
    pymongo[srv]
include_package_data = True


